--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "bootstrap": "^5.2.1",
     "next": "12.3.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
     "remixicon": "^2.5.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
